Web MIDI: do not keep virtual synth open

To release an internally allocated audio stream, close unsupported
device handles as soon as possible.

This is a short-term fix, and will have an essential fix later.

TEST=powercfg/requests shows no audio stream after Web MIDI is called
BUG=617086

Review-Url: https://codereview.chromium.org/2485903002
Cr-Commit-Position: refs/heads/master@{#431297}

Former-commit-id: 491b24ffbe72a50d3af7846bf9207020fb09049e